--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <img src="Untitled-3.png" alt="">
                     </div>
                     <div class="content">
-                        <h3><i class="fa-solid fa-calendar-days"></i>January 25, 2023</h3>
+                        <h3><i class="fa-solid fa-calendar-days"></i>December 20, 2023</h3>
                         <h1>Card copying </h1>
                         <p>This project is a machine to copy NFC cards, MIFARE cards, and others card to make backup cards.</p>
                     </div>
@@ -93,7 +93,7 @@
                         <img src="Untitled-4.png" alt="">
                     </div>
                     <div class="content">
-                        <h3><i class="fa-solid fa-calendar-days"></i>January 25, 2021</h3>
+                        <h3><i class="fa-solid fa-calendar-days"></i>March 12, 2021</h3>
                         <h1>Survey vehicle</h1>
                         <p>Survey vehicle can be controlled and viewed camera in real time via Wi-Fi and can be controlled via mobile phone.</p>
                     </div>
@@ -106,7 +106,7 @@
                         <img src="Untitled-1.png" alt="">
                     </div>
                     <div class="content">
-                        <h3><i class="fa-solid fa-calendar-days"></i>January 25, 2023</h3>
+                        <h3><i class="fa-solid fa-calendar-days"></i>January 10, 2023</h3>
                         <h1>Remote air WiFi </h1>
                         <p>This project is to make an air conditioner remote control that can be controlled via WiFi from a mobile phone.</p>
                     </div>
@@ -119,7 +119,7 @@
                         <img src="Untitled-6.png" alt="">
                     </div>
                     <div class="content">
-                        <h3><i class="fa-solid fa-calendar-days"></i>January 25, 2021</h3>
+                        <h3><i class="fa-solid fa-calendar-days"></i>February 21, 2021</h3>
                         <h1>wifi remote control car</h1>
                         <p>This project is to make an air conditioner remote control that can be controlled via WiFi from a mobile phone.</p>
                     </div>
@@ -132,7 +132,7 @@
                         <img src="Untitled-7.png" alt="">
                     </div>
                     <div class="content">
-                        <h3><i class="fa-solid fa-calendar-days"></i>January 25, 2022</h3>
+                        <h3><i class="fa-solid fa-calendar-days"></i>December 31, 2022</h3>
                         <h1>Lemon counting</h1>
                         <p>This machine can count lemons with a total of 4 sensors. The number of lemons will be displayed on the LCD screen.</p>
                     </div>
@@ -145,7 +145,7 @@
                         <img src="Untitled-8.png" alt="">
                     </div>
                     <div class="content">
-                        <h3><i class="fa-solid fa-calendar-days"></i>January 25, 2022</h3>
+                        <h3><i class="fa-solid fa-calendar-days"></i>January 27, 2024</h3>
                         <h1>Fire detector</h1>
                         <p>This machine can detect flames and will send the values ​​to LINE and record the event, time, date in Excel.</p>
                     </div>
@@ -158,7 +158,7 @@
                         <img src="Untitled-9.png" alt="">
                     </div>
                     <div class="content">
-                        <h3><i class="fa-solid fa-calendar-days"></i>January 25, 2022</h3>
+                        <h3><i class="fa-solid fa-calendar-days"></i>April 15, 2023</h3>
                         <h1>Turn lights on/off with voice</h1>
                         <p>Turn on/off lights with voice commands No need to get up and close it.</p>
                     </div>
@@ -183,7 +183,7 @@
         </div>
     </main>
     <footer>
-        <p class="f">THANK</p>
+        <p class="f">THANKS</p>
     </footer>
     <script src="script.js"></script>
 </body>
