--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
     </main>
     <footer>
-        <p class="f">THANKS</p>
+        <p class="f">MIFI | ลิขสิทธิ์ © 2024</p>
     </footer>
     <script src="script.js"></script>
 </body>
