--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="content">
                         <h3><i class="fa-solid fa-calendar-days"></i>August 05, 2023</h3>
                         <h1>Clock temperature.</h1>
-                        <p>This project is to make an air conditioner remote control that can be controlled via WiFi from a mobile phone.</p>
+                        <p>This project is a watch that has a cute face display and can measure temperature.</p>
                     </div>
                     <div class="footer">
                         <a href="https://github.com/Michocfilm/ColckTemp.git" target="_blank"><button>Learn More</button></a>
@@ -173,7 +173,7 @@
                     <div class="content">
                         <h3><i class="fa-solid fa-calendar-days"></i>April 12, 2024</h3>
                         <h1>Rain detector</h1>
-                        <p>Turn on/off lights with voice commands No need to get up and close it.</p>
+                        <p>When rainwater is detected This machine will send notifications to LINE and record events in Excell.</p>
                     </div>
                     <div class="footer">
                         <a href="https://github.com/Michocfilm/Rain-detector.git" target="_blank"><button>Learn More</button></a>
